--- a/style.css
+++ b/style.css
@@ -43,9 +43,9 @@ a:hover{text-decoration: none; cursor:pointer;}
 
 /* Sizes */
 
-.bloc-lg{
+/* .bloc-lg{
 	padding:100px 50px;
-}
+} */
 .bloc-sm{
 	padding:20px 50px;
 }
